fixed json error
todo: fix voting